src/test/deca/context/valid/fieldcall.deca
class Animal {
    protected float poids;
    protected int nbPates;

    void faireCrier() {
        println("Grrrrrrrrrr");
    }

    float nourrir(float poidsNourriture) {
        this.poids = this.poids + poidsNourriture;
        return this.poids;
    }

}