src/test/deca/context/invalid/bad_return2.deca
//ERROR :13
class Animal {
    protected float poids;
    protected int nbPates;

    void faireCrier() {
        println("Grrrrrrrrrr");
    }

    int nourrir(float poidsNourriture) {

        poids = poids + poidsNourriture;
        return poids;
    }

}